--- a/src/app/my-dialog/my-dialog.component.html
+++ b/src/app/my-dialog/my-dialog.component.html
@@ -1,5 +1,5 @@
 <h2 mat-dialog-title>Dossier {{modalTitle}}</h2>
-<mat-dialog-content>Tu es sure d'effectuer cette action {{modalTitle}}??
+<mat-dialog-content *ngIf="data.update!='name'">Tu es sure d'effectuer cette action {{modalTitle}}??
     
 
     <div class="card-body">
@@ -54,8 +54,18 @@
         </table>
     </div>
 </mat-dialog-content>
-<mat-dialog-actions>
-<button mat-button mat-dialog-close>No</button>
+<mat-dialog-actions *ngIf="data.update=='name'">
+    <div class="card-body">
+        <input [(ngModel)]="nameDossier"  type="text"class="form-control"  placeholder="{{data.title}}">  
+    </div>
 
-<button mat-button [mat-dialog-close]="true">Yes</button>
+</mat-dialog-actions>
+<mat-dialog-actions *ngIf="data.update=='name'">
+<button mat-button mat-dialog-close>NON</button>
+
+<button (click)="updatedossier()" mat-button [mat-dialog-close]="true">OUI</button>
+</mat-dialog-actions>
+<mat-dialog-actions *ngIf="data.update!='name'">
+<button mat-button mat-dialog-close>NON</button>
+<button mat-button [mat-dialog-close]="true">OUI</button>
 </mat-dialog-actions>
