update-form-json-formulaire

--- a/src/app/board/forms/add-form/add-form.component.html
+++ b/src/app/board/forms/add-form/add-form.component.html
@@ -433,7 +433,7 @@
                                      
                                     </div>
                                     <mat-icon style="cursor: help;" >library_add</mat-icon>
-                                    <span (click)="section.questions[i].grille.scoreS.push({title:''})" style="cursor: pointer;"> Ajouter une option </span>
+                                    <span (click)="section.questions[i].grille.scoreS.push({title:'', score:0})" style="cursor: pointer;"> Ajouter une option </span>
                                   </div>
                                 </div>
                               </div>
