--- a/src/app/board/doctor/list-doctor/list-doctor.component.css
+++ b/src/app/board/doctor/list-doctor/list-doctor.component.css
@@ -1,3 +1,16 @@
 .fas:hover{
     cursor: pointer;
 }
+/* .pagination {
+    display: inline-block;
+  }
+  
+  .pagination a {
+    color: black;
+    float: left;
+    padding: 8px 16px;
+    text-decoration: none;
+  } */
+  .my-pagination /deep/ .ngx-pagination .current {
+    background: #153d77;
+}
