--- a/src/app/board/doctor/list-doctor/list-doctor.component.html
+++ b/src/app/board/doctor/list-doctor/list-doctor.component.html
@@ -55,7 +55,7 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr *ngFor="let doctor of allDoctors  | paginate: { itemsPerPage: 10, currentPage: p }">
+                    <tr *ngFor="let doctor of allDoctors  |  paginate: { itemsPerPage: 8, currentPage: page,totalItem:totalLength }">
                         <td><img [src]=" path.url + 'getfile/' + doctor.photo" width="32" height="32"
                                 class="rounded-circle my-n1" alt="Avatar"></td>
                         <td>{{doctor.name + ' ' + doctor.lastname}} </td>
@@ -89,9 +89,13 @@
                     </tr>
                 </tbody>
             </table>
-            <div class="text-center mt-5"> 
+       <!--      <div class="text-center mt-5"> 
                 <pagination-controls previousLabel="Précédent"
                 nextLabel="Suivant" (pageChange)="p = $event"></pagination-controls>
+            </div> -->
+            <div *ngIf="totalLength>8" class="text-center mt-5"> 
+                <pagination-controls class="my-pagination" previousLabel="Précédent"
+                nextLabel="Suivant" (pageChange)="page = $event"></pagination-controls>
             </div>
         </div>
     </div>
