fixe-forget-password

--- a/src/app/board/board.component.html
+++ b/src/app/board/board.component.html
@@ -82,7 +82,7 @@
          
                 </li> -->
                 <li class="sidebar-item" style="padding-top: 100%;">
-                    <a class="sidebar-link collapsed" (click)="_auth.logoutUser()" href="#" id="userDropdown" data-toggle="dropdown">
+                    <a class="sidebar-link collapsed" (click)="_auth.logoutUser()"  id="userDropdown" data-toggle="dropdown">
                         <i class="align-middle fas fa-cog"></i>Déconnexion
                     </a>
                  <!--    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userDropdown">
