--- a/src/app/board/statistics/statistics.component.html
+++ b/src/app/board/statistics/statistics.component.html
@@ -70,7 +70,7 @@
                                 </div>
 
                                 <div class="col-auto">
-                                    <select id="gender" style="border-color: #2469ce!important;" (change)="getFormsbyId($event.target.value)">
+                                    <select id="gender" style="border-color: #2469ce!important;height: 41px;" (change)="getFormsbyId($event.target.value)">
                                         <option >
                                              Professionnel de Santé
                                     </option>
