--- a/src/app/reset/reset.component.html
+++ b/src/app/reset/reset.component.html
@@ -1,4 +1,4 @@
-<main class="main h-100 w-100">
+<!-- <main class="main h-100 w-100">
     <div class="container h-100">
         <div class="row h-100">
             <div class="col-sm-10 col-md-8 col-lg-6 mx-auto d-table h-100">
@@ -44,4 +44,58 @@
             </div>
         </div>
     </div>
-</main>
+</main> -->
+
+<main class="main h-100 w-100">
+    <div class="limiter">
+        <div class="container-login100">
+            <div class="wrap-login100">
+                <div class="login100-pic js-tilt" data-tilt>
+                    <img src="assets/doc.png" alt="IMG">
+                </div>
+             <!--    <div *ngIf="alert" class="text-center ">
+                    <div  class="alert alert-danger p-3 my-2" >
+                        Email ou mot de passe incorrect !
+                    </div>
+                </div> -->
+                <form class="login100-form validate-form" >
+                    <span class="login100-form-title">
+                        Modifier mot de passe
+                    </span>
+    
+                    <div class="form-group">
+                        <mat-form-field style="width: 100%;">
+                            <mat-label>Mot de passe</mat-label>
+                          <!--   <input [(ngModel)]="loginUserData.password" matInput [ngClass]="{'form-control': true, 'form-control-lg' : true , 'error' : passwordAlert}"  [type]="passwordType" name="password" placeholder="Confirmer mot de passe" />
+                           -->
+                           <input [type]="passwordType" matInput placeholder="Password" [(ngModel)]="loginUserData.password"  name="password">  <mat-icon  matSuffix style="cursor: pointer;" (click)="togglePassword()">{{iconType}}</mat-icon>     
+                           
+                       <!--      <mat-icon  matSuffix style="cursor: pointer;" (click)="togglePassword()">{{iconType}}</mat-icon> -->
+                          </mat-form-field>
+                    </div>
+                    <div class="form-group">
+
+                        <mat-form-field  style="width: 100%;">
+                            <mat-label>Confirmer Mot de passe</mat-label>
+                           <!--  <input [(ngModel)]="loginUserData.confirm" matInput [ngClass]="{'form-control': true, 'form-control-lg' : true , 'error' : passwordAlert}"  [type]="passwordType" name="password" placeholder="Confirmer mot de passe" />
+                           -->
+                            <input [type]="passwordType" matInput placeholder="Password" [(ngModel)]="loginUserData.confirm"  name="password">  <mat-icon  matSuffix style="cursor: pointer;" (click)="togglePassword()">{{iconType}}</mat-icon>     
+                           
+                            <!--     <mat-icon  matSuffix style="cursor: pointer;" (click)="togglePassword()">{{iconType}}</mat-icon> -->
+
+                          </mat-form-field>
+                    </div>
+                    
+                    <div class="container-login100-form-btn">
+                        <button class="login100-form-btn" (click)="reset()" >
+                            Modifier mot de passe
+                        </button>
+                    </div>
+    
+
+                </form>
+            </div>
+        </div>
+    </div>
+    </main>
+    
