--- a/src/app/board/statistics/statistics.component.html
+++ b/src/app/board/statistics/statistics.component.html
@@ -85,7 +85,7 @@
                             <div *ngIf="!spinerFormulaireAff" class="spinner-border" role="status">
   
                             </div>
-                            <h1 class="display-5 mt-2 mb-4">{{numberFormulAff}}</h1>
+                            <h1 class="display-5 mt-2 mb-4">{{taille}}</h1>
                             <div class="mb-0">
                                 <span class="text-success"> <i class="mdi mdi-arrow-bottom-right"></i> </span>
                                 Nombres Formulaires Affecter
