--- a/src/app/board/doctor/affectations/affectations.component.html
+++ b/src/app/board/doctor/affectations/affectations.component.html
@@ -24,7 +24,7 @@
             
                 <i class="fa fa-search" aria-hidden="true"></i>
             
-                <input type="text" placeholder="Nom dossier ..." (input)="filterItem($event.target.value)"
+                <input type="text" placeholder="Nom formulaire ..." (input)="filterItem($event.target.value)"
                >
             
             </div>
