add prix , add video

--- a/src/app/board/board.component.html
+++ b/src/app/board/board.component.html
@@ -81,6 +81,14 @@
                     </a>
          
                 </li>
+                <li class="sidebar-item">
+                    <a (click)="openDialog()" class="sidebar-link collapsed">
+                        <i style="color: #153d77;" class="align-middle mr-2 fa fa-file-archive"></i>
+                   
+                        <span class="align-middle">Prix</span>
+                    </a>
+          
+                </li>
             <!--     <li class="sidebar-item">
                     <a href="#"(click)="_auth.logoutUser" class="sidebar-link collapsed">
                         <i style="color: #153d77;" class="align-middle mr-2 fa fa-file-archive"></i>
