--- a/src/app/board/statistics/statistics.component.html
+++ b/src/app/board/statistics/statistics.component.html
@@ -2,7 +2,26 @@
     <h1 class="header-title">
         Statistiques de la Plateforme
     </h1>
-   
+    
+
+ <!--    <button (click)="payment('166')">
+        pay
+    </button>
+    <button (click)="payment('75')">
+        pay1
+    </button>
+    <button (click)="payment('455')">
+        pay2
+    </button>
+    <button (click)="payment('299')">
+        pay3
+    </button>
+    <button (click)="payment('351')">
+        pay4
+    </button>
+    <button (click)="payment('20')">
+        pay5
+    </button> -->
 </div>
 
 <div class="row">
