--- a/src/app/companent/prix/prix.component.html
+++ b/src/app/companent/prix/prix.component.html
@@ -1,3 +1,5 @@
+
+<div>
 <h2 mat-dialog-title>Ajouter les prix total des Formulaires</h2>
 
 <mat-dialog-content [formGroup]="form" > 
@@ -27,9 +29,20 @@
                formControlName="desc"
                [value]="desc">
     </mat-form-field>
+   <!--  <mat-form-field appearance="fill">
+        <mat-label>Choose a technology</mat-label>
+        <mat-select>
+          <mat-option value="html"> HTML </mat-option>
+          <mat-option value="css" >CSS (disabled)</mat-option>
+          <mat-option value="js">JAVASCRIPT</mat-option>
+        </mat-select>
+      </mat-form-field> -->
 </mat-dialog-content>
-
+<h1 *ngIf="validData" style="color: red;">Veuillez remplir toutes les sections du formulaire</h1>
 <mat-dialog-actions style="align-items: center;">
-  
-    <button mat-button class="mat-raised-button mat-primary"(click)="save()">Save</button>
+   
+    <button mat-button class="mat-raised-button mat-primary" (click)="save()">Save</button>
+
+    <button mat-raised-button color="warn"  (click)="close()">Exit</button>
 </mat-dialog-actions>
+</div>
