--- a/src/app/board/doctor/list-doctor/list-doctor.component.html
+++ b/src/app/board/doctor/list-doctor/list-doctor.component.html
@@ -56,7 +56,7 @@
                 </thead>
                 <tbody>
                     <tr *ngFor="let doctor of allDoctors  |  paginate: { itemsPerPage: 8, currentPage: page,totalItem:totalLength }">
-                        <td><img [src]=" path.url + 'getfile/' + doctor.photo" width="32" height="32"
+                        <td><img [src]="doctor.photo" width="32" height="32"
                                 class="rounded-circle my-n1" alt="Avatar"></td>
                         <td>{{doctor.name + ' ' + doctor.lastname}} </td>
                         <td *ngIf="screenWidth > 450">{{doctor.adresse}}</td>
