--- a/src/app/board/forms/detail-form/detail-form.component.html
+++ b/src/app/board/forms/detail-form/detail-form.component.html
@@ -191,12 +191,12 @@
                             </textarea> -->
                             <textarea autosize  rows="20" autosize    [(ngModel)]="section.questions[i].title"  rows="2" class="question-title"  placeholder="Titre du Question" >
                             </textarea>
-                            <label (click)="in = i;" for="quesPhoto" >
+                           <!--  <label (click)="in = i;" for="quesPhoto" >
                                             
                                     <mat-icon class="ico mt-4" color="primary" >photo</mat-icon>
                             
                             </label>
-                            <input  (change)="onAddQuestion($event,s)"  type="file" name="" style="display: none;" accept='image/*'  id="quesPhoto">
+                            <input  (change)="onAddQuestion($event,s)"  type="file" name="" style="display: none;" accept='image/*'  id="quesPhoto"> -->
                             
                             
                         
@@ -353,7 +353,7 @@
                                                 <mat-icon class="ico" color="primary" >photo</mat-icon>
                                         
                                         </label>
-                                        <input  (change)="onAdd($event,s,'CM')"  type="file" name="" style="display: none;" accept='image/*'  id="checkPhoto">
+                                        <input  (change)="handleFileInput($event.target.files,s,'CM')" type="file" name="" style="display: none;" accept='image/*'  id="checkPhoto">
                                         
                                         
                                         <mat-icon class="ico" style="margin-left: 16px;cursor: pointer;" (click)="deleteImageOption(section.questions[i].optioncm[o].image , i , o,s,'CM');removeOptionCm(i, o,s)" *ngIf="section.questions[i].optioncm.length > 1"  color="primary" >close</mat-icon>
@@ -399,7 +399,7 @@
                             </div>
         
                             <div  *ngIf="section.questions[i].optioncm[o].image.length > 1 " style="width: 100%; margin-left: 44px;position: relative;">
-                                <img style="width: 250px;" class="img-thumbnail" [src]="endpoint.url + 'getfile/' + section.questions[i].optioncm[o].image " alt="">
+                                <img style="width: 250px;" class="img-thumbnail" [src]="section.questions[i].optioncm[o].image " alt="">
                                 <button (click)="deleteImageOption(section.questions[i].optioncm[o].image , i , o,s,'CM')" mat-mini-fab  color="primary" aria-label="Example icon button with a home icon" style="position: absolute;left: -16px;top: -16px;">
                                     <mat-icon>close</mat-icon>
                                 </button>
@@ -456,7 +456,7 @@
                                                 <mat-icon class="ico"  color="primary">photo</mat-icon>
                                             
                                         </label>
-                                        <input  (change)="onAdd($event,s,'CC')"  type="file" name="" style="display: none;" accept='image/*' id="radioPhoto">
+                                        <input  (change)="handleFileInput($event.target.files,s,'CC')"  type="file" name="" style="display: none;" accept='image/*' id="radioPhoto">
                                         
                                         <mat-icon class="ico"  style="margin-left: 16px;" (click)="deleteImageOption(section.questions[i].options[o].image , i , o,s,'CC') ; removeOption(i, o,s)" *ngIf="section.questions[i].options.length > 1"  color="primary" >close</mat-icon>
                                     
@@ -497,7 +497,7 @@
                                 </div>
 
                                 <div  *ngIf="section.questions[i].options[o].image.length > 1 " style="width: 100%; margin-left: 44px;position: relative;">
-                                    <img style="width: 250px;" class="img-thumbnail" [src]="endpoint.url + 'getfile/' + section.questions[i].options[o].image " alt="">
+                                    <img style="width: 250px;" class="img-thumbnail" [src]="section.questions[i].options[o].image " alt="">
                                     <button (click)="deleteImageOption(section.questions[i].options[o].image , i , o,s,'CC')" mat-mini-fab  color="primary" aria-label="Example icon button with a home icon" style="position: absolute;left: -16px;top: -16px;">
                                         <mat-icon>close</mat-icon>
                                     </button>
