--- a/src/app/board/patient/detail-patient/detail-patient.component.html
+++ b/src/app/board/patient/detail-patient/detail-patient.component.html
@@ -45,13 +45,13 @@
             <div class="card-body">
                 <div  class="row no-gutters">
                     <div class="col-sm-3 col-xl-12 text-center">
-                        <img [src]=" url ? url : path.url + 'getfile/' + patient?.photo" width="94" height="94" class="rounded-circle mt-2" alt="Angelica Ramos">
+                        <img [src]="patient?.photo" width="94" height="94" class="rounded-circle mt-2" alt="Angelica Ramos">
                         <label for="upt">
                         <a (click)="updateTogglePhoto = !updateTogglePhoto" ><i style="margin-left: 8px;font-size: 20px;margin-top: -55px;" class="align-middle fas fa-fw fa-pen "></i></a>
 
                         </label>
                         <br>
-                        <input #fileInput (change)="onAdd($event)"  style="display: none;" type="file" id="upt">
+                        <input #fileInput (change)="handleFileInput($event.target.files)"  style="display: none;" type="file" id="upt">
                         <button (click)="updatePhoto()" *ngIf="url" class="btn btn-primary mt-2" style="margin-left: -35px;" >Enregistrer 
                             <div   *ngIf="showSpinnerUpdatePhoto" class="spinner-border  " role="status">
                                 <span class="visually-hidden"></span>
